--- a/views/about-me.html
+++ b/views/about-me.html
@@ -16,7 +16,7 @@
         <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
         <a href="index.html">HOME</a>
         <a class="active-tab" href="about-me.html">OVER MIJ</a>
-        <a href="#">PROJECTEN</a>
+        <a href="projects.html">PROJECTEN</a>
         <a href="#">CONTACT</a>
       </div>
 
@@ -24,7 +24,7 @@
         <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
         <a class="hide-on-mobile" href="index.html">HOME</a>
         <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
-        <a class="hide-on-mobile" href="#">PROJECTEN</a>
+        <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
         <a class="hide-on-mobile" href="#">CONTACT</a>
         <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
       </div>
@@ -33,15 +33,17 @@
     <div class="about-me-text-container">
       <p>
         Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en zit in het eerste jaar van de opleiding
-        Software Developer. Ik programmeer met passie en ben heel leergierig. Ik heb ervaring met HTML5, CSS3,
-        Javascript en node.js. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
+        Software Developer. Ik programmeer met passie en leer graag. Ik heb ervaring met HTML5, CSS3, Javascript,
+        node.js en SQL. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
       </p>
       <p>
         Ik zou graag met u in contact willen komen. Als u mij wilt berkeiken kan dat via de mail of telefoon. Ik hoor
         graag van u!
       </p>
+    </div>
+    <div class="mn-logo-container">
       <a href="index.html"><img src="../images/MN_logo.png" alt="MN-LOGO" /></a>
-  footer.css>
+    </div>
 
     <footer>
       <div class="phone-footer-container">
