--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
       <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
       <a class="active-tab" href="index.html">HOME</a>
       <a href="about-me.html">OVER MIJ</a>
-      <a href="#">PROJECTEN</a>
+      <a href="projects.html">PROJECTEN</a>
       <a href="#">CONTACT</a>
     </div>
 
@@ -28,7 +28,7 @@
       <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
       <a class="active-tab hide-on-mobile" href="index.html">HOME</a>
       <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
-      <a class="hide-on-mobile" href="#">PROJECTEN</a>
+      <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
       <a class="hide-on-mobile" href="#">CONTACT</a>
       <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt=""></a>
     </div>
@@ -66,7 +66,7 @@
   <div class="project-images-container">
     <div class="project-1-container project-flex-container">
       <div class="image-container">
-        <!-- <img src="../images/Logo Licht klein.png" alt="N.Kloezeman logo"> -->
+        <img src="../images/Kloezeman-logo-licht.png" alt="N.Kloezeman logo">
       </div>
       <p>Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd. Ik heb voor die klant daarna ook een
         website gemaakt. Ik vind dit een van mijn coolste projecten want het is voor een klant en ik heb er veel van
@@ -74,7 +74,7 @@
     </div>
     <div class="project-2-container project-flex-container">
       <div class="image-container">
-        <!-- <img src="../images/Logo Licht klein.png" alt="N.Kloezeman logo"> -->
+        <img src="../images/Kloezeman-logo-licht.png" alt="N.Kloezeman logo">
       </div>
       <p>Dit een kleine todo webapp. Dit project was vooral veel gefocust op de database en de backend. Maar ik vond het
         wel leuk om op mijn portfolio te zetten. <a class="meer-zien" href="#">Meer zien.</a></p>
