--- a/css/main.css
+++ b/css/main.css
@@ -165,26 +165,24 @@ body {
 }
 
 .image-container {
-  min-width: 600px;
-  min-height: 365px;
-  height: fit-content;
   box-sizing: border-box;
+  padding: 40px;
+  min-width: 600px;
+  height: auto;
 
   background-color: #3d3d3d;
   border: 1px solid #979797;
   border-radius: 20px;
+
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* .image-container img { */
-/*   max-width: 100%; */
-/*   max-height: 100%; */
-/*   width: auto; */
-/*   height: auto; */
-/*   object-fit: contain; */
-/* } */
+.image-container img {
+  width: 80%;
+  height: auto;
+}
 
 .project-1-container p {
   font-size: 30px;
