--- a/views/about-me.html
+++ b/views/about-me.html
@@ -17,7 +17,7 @@
         <a href="index.html">HOME</a>
         <a class="active-tab" href="about-me.html">OVER MIJ</a>
         <a href="projects.html">PROJECTEN</a>
-        <a href="#">CONTACT</a>
+        <a href="contact.html">CONTACT</a>
       </div>
 
       <div>
@@ -25,7 +25,7 @@
         <a class="hide-on-mobile" href="index.html">HOME</a>
         <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
         <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-        <a class="hide-on-mobile" href="#">CONTACT</a>
+        <a class="hide-on-mobile" href="contact.html">CONTACT</a>
         <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
       </div>
     </nav>
@@ -48,7 +48,7 @@
     <footer>
       <div class="phone-footer-container">
         <p>Wil je meer over mij te weten komen? <a href="#">Klik hier!</a></p>
-        <a href="#"><button class="phone-btn">Neem contact op</button></a>
+        <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
       </div>
 
       <div class="footer-container">
@@ -68,7 +68,7 @@
           /></a>
         </div>
         <div class="contact-btn-container">
-          <a href="#"><button class="contact-btn" type="button">Neem contact op</button></a>
+          <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
         </div>
       </div>
     </footer>
