--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
       <a class="active-tab" href="index.html">HOME</a>
       <a href="about-me.html">OVER MIJ</a>
       <a href="projects.html">PROJECTEN</a>
-      <a href="#">CONTACT</a>
+      <a href="contact.html">CONTACT</a>
     </div>
 
     <div>
@@ -29,7 +29,7 @@
       <a class="active-tab hide-on-mobile" href="index.html">HOME</a>
       <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
       <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-      <a class="hide-on-mobile" href="#">CONTACT</a>
+      <a class="hide-on-mobile" href="contact.html">CONTACT</a>
       <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt=""></a>
     </div>
   </nav>
@@ -70,21 +70,21 @@
       </div>
       <p>Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd. Ik heb voor die klant daarna ook een
         website gemaakt. Ik vind dit een van mijn coolste projecten want het is voor een klant en ik heb er veel van
-        geleerd tijdens het maken. <a class="meer-zien" href="#">Meer zien.</a></p>
+        geleerd tijdens het maken. <a class="meer-zien" href="projects.html">Meer zien.</a></p>
     </div>
     <div class="project-2-container project-flex-container">
       <div class="image-container">
         <img src="../images/Kloezeman-logo-licht.png" alt="N.Kloezeman logo">
       </div>
       <p>Dit een kleine todo webapp. Dit project was vooral veel gefocust op de database en de backend. Maar ik vond het
-        wel leuk om op mijn portfolio te zetten. <a class="meer-zien" href="#">Meer zien.</a></p>
+        wel leuk om op mijn portfolio te zetten. <a class="meer-zien" href="projects.html">Meer zien.</a></p>
     </div>
   </div>
 
   <footer>
     <div class="phone-footer-container">
       <p>Wil je meer over mij te weten komen? <a href="#">Klik hier!</a></p>
-      <a href="#"><button class="phone-btn">Neem contact op</button></a>
+      <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
     </div>
 
 
@@ -104,7 +104,7 @@
             alt="linkedIn logo"></a>
       </div>
       <div class="contact-btn-container">
-        <a href="#"><button class="contact-btn" type="button">Neem contact op</button></a>
+        <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
       </div>
     </div>
   </footer>
