--- a/views/projects.html
+++ b/views/projects.html
@@ -16,16 +16,16 @@
         <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
         <a href="index.html">HOME</a>
         <a href="about-me.html">OVER MIJ</a>
-        <a class="active-tab" href="#">PROJECTEN</a>
-        <a href="#">CONTACT</a>
+        <a class="active-tab" href="projects.html">PROJECTEN</a>
+        <a href="contact.html">CONTACT</a>
       </div>
 
       <div>
         <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
         <a class="hide-on-mobile" href="index.html">HOME</a>
         <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
-        <a class="active-tab hide-on-mobile" href="#">PROJECTEN</a>
-        <a class="hide-on-mobile" href="#">CONTACT</a>
+        <a class="active-tab hide-on-mobile" href="projects.html">PROJECTEN</a>
+        <a class="hide-on-mobile" href="contact.html">CONTACT</a>
         <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
       </div>
     </nav>
@@ -73,8 +73,8 @@
 
     <footer>
       <div class="phone-footer-container">
-        <p>Wil je meer over mij te weten komen? <a href="#">Klik hier!</a></p>
-        <a href="#"><button class="phone-btn">Neem contact op</button></a>
+        <p>Wil je meer over mij te weten komen? <a href="contact.html">Klik hier!</a></p>
+        <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
       </div>
 
       <div class="footer-container">
@@ -94,7 +94,7 @@
           /></a>
         </div>
         <div class="contact-btn-container">
-          <a href="#"><button class="contact-btn" type="button">Neem contact op</button></a>
+          <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
         </div>
       </div>
     </footer>
