--- a/css/about-me.css
+++ b/css/about-me.css
@@ -16,7 +16,7 @@ body {
   gap: 50px;
 }
 .about-me-text-container p {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 500;
   text-align: center;
 }
@@ -34,4 +34,10 @@ body {
 .mn-logo-container img {
   width: 100%;
   height: auto;
+}
+
+@media screen and (max-width: 600px) {
+  .about-me-text-container p {
+    font-size: 20px;
+  }
 }
