--- a/css/contact.css
+++ b/css/contact.css
@@ -27,7 +27,7 @@ body {
 }
 
 .text-container p {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 500;
 }
 
@@ -94,27 +94,34 @@ body {
 }
 
 @media screen and (max-width: 880px) {
-  .text-container p {
-    font-size: 30px;
+
+  .profiles-container {
+    margin-top: 100px;
   }
 
+  .text-container p {
+    font-size: 25px;
+  }
+
+  .linkedin-container, .github-container {
+    width: 90%;
+  }
 
   .flex-row-container {
     flex-direction: column;
     align-items: center;
   }
 
-  /* .profiles-container p { */
-  /*   font-size: clamp(5px 1vw 15px); */
-  /* } */
-
   .info-container {
     max-width: 375px;
+    aspect-ratio: 1/1;
+    min-height: fit-content;
+    width: 90%;
     margin: 0 auto;
   }
 
   .info-container p {
-    font-size: clamp(22px, 2vw, 28px);
+    font-size: clamp(12px, 6vw, 25px);
     white-space: nowrap;
   }
 }
