--- a/views/about-me.html
+++ b/views/about-me.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
@@ -8,71 +9,74 @@
     <link href="../css/about-me.css" rel="stylesheet" />
     <link href="../css/nav-bar.css" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
-  </head>
+</head>
 
-  <body>
+<body>
     <nav>
-      <div class="sidebar">
-        <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
-        <a href="index.html">HOME</a>
-        <a class="active-tab" href="about-me.html">OVER MIJ</a>
-        <a href="projects.html">PROJECTEN</a>
-        <a href="contact.html">CONTACT</a>
-      </div>
+        <div class="sidebar">
+            <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png"
+                    alt="MN logo" /></a>
+            <a href="index.html">HOME</a>
+            <a class="active-tab" href="about-me.html">OVER MIJ</a>
+            <a href="projects.html">PROJECTEN</a>
+            <a href="contact.html">CONTACT</a>
+        </div>
 
-      <div>
-        <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
-        <a class="hide-on-mobile" href="index.html">HOME</a>
-        <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
-        <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-        <a class="hide-on-mobile" href="contact.html">CONTACT</a>
-        <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
-      </div>
+        <div>
+            <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
+            <a class="hide-on-mobile" href="index.html">HOME</a>
+            <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
+            <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
+            <a class="hide-on-mobile" href="contact.html">CONTACT</a>
+            <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
+        </div>
     </nav>
 
     <div class="about-me-text-container">
-      <p>
-        Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en zit in het eerste jaar van de opleiding
-        Software Developer. Ik programmeer met passie en leer graag. Ik heb ervaring met HTML5, CSS3, Javascript,
-        node.js en SQL. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
-      </p>
-      <p>
-        Ik zou graag met u in contact willen komen. Als u mij wilt berkeiken kan dat via de mail of telefoon. Ik hoor
-        graag van u!
-      </p>
+        <p>
+            Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en zit in het eerste jaar van de opleiding
+            Software Developer. Ik programmeer met passie en leer graag. Ik heb ervaring met HTML5, CSS3, Javascript,
+            node.js en SQL. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
+        </p>
+        <p>
+            Ik zou graag met u in contact willen komen. Als u mij wilt berkeiken kan dat via de mail of telefoon. Ik
+            hoor
+            graag van u!
+        </p>
     </div>
     <div class="mn-logo-container">
-      <a href="index.html"><img src="../images/MN_logo.png" alt="MN-LOGO" /></a>
+        <a href="index.html"><img src="../images/MN_logo.png" alt="MN-LOGO" /></a>
     </div>
 
     <footer>
-      <div class="phone-footer-container">
-        <p>Wil je meer over mij te weten komen? <a href="#">Klik hier!</a></p>
-        <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
-      </div>
+        <div class="phone-footer-container">
+            <p>Wil je een paar van mijn projecten zien? <a href="projects.html">Klik hier!</a></p>
+            <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
+        </div>
 
-      <div class="footer-container">
-        <div class="footer-info-container">
-          <div class="location-info">
-            <p>De Wieren 16</p>
-            <p>9866 AK Lutjegast</p>
-          </div>
-          <div class="contact-info">
-            <p>T: <a href="#">06 57 16 76 32</a></p>
-            <p>E: <a href="#">Michielmitsjol@gmail.com</a></p>
-          </div>
+
+        <div class="footer-container">
+            <div class="footer-info-container">
+                <div class="location-info">
+                    <p>De Wieren 16</p>
+                    <p>9866 AK Lutjegast</p>
+                </div>
+                <div class="contact-info">
+                    <p>T: <a href="tel:+31657167632">06 57 16 76 32</a></p>
+                    <p>E: <a href="mailto:Michielmitsjol@gmail.com">Michielmitsjol@gmail.com</a></p>
+                </div>
+            </div>
+            <div class="linkedin-logo-container">
+                <a href="https://www.linkedin.com" target="_blank"><img src="../images/LinkedIn-Logo.wine.png"
+                        alt="linkedIn logo"></a>
+            </div>
+            <div class="contact-btn-container">
+                <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
+            </div>
         </div>
-        <div class="linkedin-logo-container">
-          <a href="https://www.linkedin.com" target="_blank"
-            ><img src="../images/LinkedIn-Logo.wine.png" alt="linkedIn logo"
-          /></a>
-        </div>
-        <div class="contact-btn-container">
-          <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
-        </div>
-      </div>
     </footer>
 
     <script src="../javascript/sidebar.js"></script>
-  </body>
+</body>
+
 </html>
