--- a/views/contact.html
+++ b/views/contact.html
@@ -1,63 +1,65 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
-    <title>CONTACT</title>
-    <link href="../css/nav-bar.css" rel="stylesheet" />
-    <link href="../css/contact.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <nav>
-      <div class="sidebar">
-        <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
-        <a href="index.html">HOME</a>
-        <a href="about-me.html">OVER MIJ</a>
-        <a href="projects.html">PROJECTEN</a>
-        <a class="active-tab" href="contact.html">CONTACT</a>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
+  <title>CONTACT</title>
+  <link href="../css/nav-bar.css" rel="stylesheet" />
+  <link href="../css/contact.css" rel="stylesheet" />
+</head>
 
-      <div>
-        <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
-        <a class="hide-on-mobile" href="index.html">HOME</a>
-        <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
-        <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-        <a class="active-tab hide-on-mobile" href="contact.html">CONTACT</a>
-        <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
-      </div>
-    </nav>
-
-    <div class="text-container">
-      <p>
-        Dit is natuurlijk een portfolio website. Ik wil mezelf promoten, en om te laten zien voor een stage en misschien
-        wel een leuke website maken voor iemand. Maar vind u mijn werk goed en wilt u mij mischien wel als stagair dan
-        mag u natuurlijk altijd contact opnemen.
-      </p>
+<body>
+  <nav>
+    <div class="sidebar">
+      <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
+      <a href="index.html">HOME</a>
+      <a href="about-me.html">OVER MIJ</a>
+      <a href="projects.html">PROJECTEN</a>
+      <a class="active-tab" href="contact.html">CONTACT</a>
     </div>
 
-    <div class="profiles-container">
-      <div class="black-box info-container">
-        <div class="location-info">
-          <p>De Wieren 16</p>
-          <p>9866 AK Lutjegast</p>
-        </div>
-        <div class="contact-info">
-          <p>T: <a href="#">06 57 16 76 32</a></p>
-          <p>E: <a href="#">Michielmitsjol@gmail.com</a></p>
-        </div>
+    <div>
+      <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
+      <a class="hide-on-mobile" href="index.html">HOME</a>
+      <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
+      <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
+      <a class="active-tab hide-on-mobile" href="contact.html">CONTACT</a>
+      <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
+    </div>
+  </nav>
+
+  <div class="text-container">
+    <p>
+      In deze website laat ik zien wat ik kan en hoeveel passie ik voor programmeren heb. Ik ben momenteel gewoon bezig
+      met mijn opleiding software developer, maar als u dit ziet en u wilt mij misschien als stagair dan mag u natuurlijk altijd contact opnemen.
+      Hebt u interesse in mijn werk of wilt u meer weten? Neem dan gerust contact op.
+    </p>
+  </div>
+
+  <div class="profiles-container">
+    <div class="black-box info-container">
+      <div class="location-info">
+        <p>De Wieren 16</p>
+        <p>9866 AK Lutjegast</p>
       </div>
-      <div class="flex-row-container">
-        <div class="black-box linkedin-container">
-          <a href="https://www.linkedin.com"><img src="../images/Linked-logo-png.webp" alt="linked logo" /></a>
-        </div>
-        <div class="black-box github-container">
-          <a href="https://www.github.com"><img src="../images/github-logo-png.png" alt="linked logo" /></a>
-        </div>
+      <div class="contact-info">
+        <p>T: <a href="tel:+31657167632">06 57 16 76 32</a></p>
+        <p>E: <a href="mailto:Michielmitsjol@gmail.com">Michielmitsjol@gmail.com</a></p>
       </div>
     </div>
+    <div class="flex-row-container">
+      <div class="black-box linkedin-container">
+        <a href="https://www.linkedin.com" target="_blank"><img src="../images/Linked-logo-png.webp" alt="linked logo" /></a>
+      </div>
+      <div class="black-box github-container">
+        <a href="https://github.com/M-Nijenhuis" target="_blank"><img src="../images/github-logo-png.png" alt="linked logo" /></a>
+      </div>
+    </div>
+  </div>
 
-    <script src="../javascript/sidebar.js"></script>
-  </body>
+  <script src="../javascript/sidebar.js"></script>
+</body>
+
 </html>
