--- a/css/projects.css
+++ b/css/projects.css
@@ -39,6 +39,10 @@ body {
   height: auto;
 }
 
+.todo-container {
+  background-color: #212121;
+}
+
 .text-info-container {
   width: 100%;
   height: 100%;
