--- a/views/projects.html
+++ b/views/projects.html
@@ -1,104 +1,108 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
-    <title>PROJECTEN</title>
-    <link href="../css/nav-bar.css" rel="stylesheet" />
-    <link href="../css/footer.css" rel="stylesheet" />
-    <link href="../css/projects.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <nav>
-      <div class="sidebar">
-        <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
-        <a href="index.html">HOME</a>
-        <a href="about-me.html">OVER MIJ</a>
-        <a class="active-tab" href="projects.html">PROJECTEN</a>
-        <a href="contact.html">CONTACT</a>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
+  <title>PROJECTEN</title>
+  <link href="../css/nav-bar.css" rel="stylesheet" />
+  <link href="../css/footer.css" rel="stylesheet" />
+  <link href="../css/projects.css" rel="stylesheet" />
+</head>
 
-      <div>
-        <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
-        <a class="hide-on-mobile" href="index.html">HOME</a>
-        <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
-        <a class="active-tab hide-on-mobile" href="projects.html">PROJECTEN</a>
-        <a class="hide-on-mobile" href="contact.html">CONTACT</a>
-        <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
-      </div>
-    </nav>
-
-    <div class="project-container">
-      <div class="project-grid-container">
-        <div class="img-container"><img src="../images/Kloezeman-logo-licht.png" alt="Kloezeman logo"></div>
-        <div class="text-info-container">
-          <h2>N.Kloezeman</h2>
-          <p>
-            Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd. Ik heb voor die klant daarna ook een
-            website gemaakt. Ik vind dit een van mijn coolste projecten want het is voor een klant en ik heb er veel van
-            geleerd tijdens het maken. De klant is erg tevreden en daar ben ik heel blij mee. Dit is dan een simpele
-            website met eingelijk alleen front-end, maar het is toch geweldig dat ik dit heb mogen maken.
-          </p>
-        </div>
-      </div>
-
-      <div class="underline"></div>
+<body>
+  <nav>
+    <div class="sidebar">
+      <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
+      <a href="index.html">HOME</a>
+      <a href="about-me.html">OVER MIJ</a>
+      <a class="active-tab" href="projects.html">PROJECTEN</a>
+      <a href="contact.html">CONTACT</a>
     </div>
 
-    <div class="project-container">
-      <div class="project-grid-container">
-        <div class="img-container"></div>
-        <div class="text-info-container">
-          <h2>Todo app</h2>
-          <p>
-            Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd. Ik heb voor die klant daarna ook een
-            website gemaakt. Ik vind dit een van mijn coolste projecten want het is voor een klant en ik heb er veel van
-            geleerd tijdens het maken. De klant is erg tevreden en daar ben ik heel blij mee. Dit is dan een simpele
-            website met eingelijk alleen front-end, maar het is toch geweldig dat ik dit heb mogen maken.
-          </p>
-        </div>
-      </div>
+    <div>
+      <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
+      <a class="hide-on-mobile" href="index.html">HOME</a>
+      <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
+      <a class="active-tab hide-on-mobile" href="projects.html">PROJECTEN</a>
+      <a class="hide-on-mobile" href="contact.html">CONTACT</a>
+      <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
+    </div>
+  </nav>
 
-      <div class="underline"></div>
+  <div class="project-container">
+    <div class="project-grid-container" id="section1">
+      <div class="img-container"><img src="../images/Kloezeman-logo-licht.png" alt="Kloezeman logo"></div>
+      <div class="text-info-container">
+        <h2>N.Kloezeman</h2>
+        <p>
+          Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd. Ik heb voor die klant daarna ook een
+          website gemaakt. Ik vind dit een van mijn coolste projecten want het is voor een klant en ik heb er veel van
+          geleerd tijdens het maken. De klant is erg tevreden en daar ben ik heel blij mee. Dit is dan een simpele
+          website met eingelijk alleen front-end, maar het is toch geweldig dat ik dit heb mogen maken.
+        </p>
+      </div>
     </div>
 
-    <div class="extra-info-container">
-      <p>
-        Ik heb nog meer projecten gemaakt maar niet echt afgemaakt :( Ik ga de komende tijd veel meer maken en er komt
-        zeker mee op te staan maar voor nu is het wat leeg
-      </p>
+    <div class="underline"></div>
+  </div>
+
+  <div class="project-container" id="section2">
+    <div class="project-grid-container">
+      <div class="img-container todo-container"><img src="../images/Todo-app.png" alt="Todo-app image"></div>
+      <div class="text-info-container">
+        <h2>Todo app</h2>
+        <p>
+          Dit een kleine todo webapp. Dit project was vooral veel gefocust op de database en de backend functionaliteit.
+          Maar ik vond
+          het wel leuk om op mijn portfolio te zetten. Het is gewoon een simpele todo app. Ik heb voor de strakke stijl
+          gekozen. Je kan
+          todo's toevoegen, verwijderen, veranderen en afvinken. Ik heb ook de tijd toegevoegd als een onderdeel van het
+          todo item. Als de tijd voorbij de tijd van het todo item is en je vinkt het item af, dan word het verwijdert.
+          Maar als de echte tijd nog niet de tijd van het todo item is geweest, dan blijft het staan.
+        </p>
+      </div>
     </div>
 
-    <footer>
-      <div class="phone-footer-container">
-        <p>Wil je meer over mij te weten komen? <a href="contact.html">Klik hier!</a></p>
-        <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
-      </div>
+    <div class="underline"></div>
+  </div>
 
-      <div class="footer-container">
-        <div class="footer-info-container">
-          <div class="location-info">
-            <p>De Wieren 16</p>
-            <p>9866 AK Lutjegast</p>
-          </div>
-          <div class="contact-info">
-            <p>T: <a href="#">06 57 16 76 32</a></p>
-            <p>E: <a href="#">Michielmitsjol@gmail.com</a></p>
-          </div>
+  <div class="extra-info-container">
+    <p>
+      Ik heb nog meer projecten gemaakt maar niet echt afgemaakt :( Ik ga de komende tijd veel meer maken en er komt
+      zeker mee op te staan maar voor nu is het wat leeg
+    </p>
+  </div>
+
+  <footer>
+    <div class="phone-footer-container">
+      <p>Wil je meer over mij te weten komen? <a href="about-me.html">Klik hier!</a></p>
+      <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
+    </div>
+
+    <div class="footer-container">
+      <div class="footer-info-container">
+        <div class="location-info">
+          <p>De Wieren 16</p>
+          <p>9866 AK Lutjegast</p>
         </div>
-        <div class="linkedin-logo-container">
-          <a href="https://www.linkedin.com" target="_blank"
-            ><img src="../images/LinkedIn-Logo.wine.png" alt="linkedIn logo"
-          /></a>
-        </div>
-        <div class="contact-btn-container">
-          <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
+        <div class="contact-info">
+          <p>T: <a href="tel:+31657167632">06 57 16 76 32</a></p>
+          <p>E: <a href="mailto:Michielmitsjol@gmail.com">Michielmitsjol@gmail.com</a></p>
         </div>
       </div>
-    </footer>
+      <div class="linkedin-logo-container">
+        <a href="https://www.linkedin.com" target="_blank"><img src="../images/LinkedIn-Logo.wine.png"
+            alt="linkedIn logo" /></a>
+      </div>
+      <div class="contact-btn-container">
+        <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
+      </div>
+    </div>
+  </footer>
 
-    <script src="../javascript/sidebar.js"></script>
-  </body>
+  <script src="../javascript/sidebar.js"></script>
+</body>
+
 </html>
