--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 40px;
 }
 
 .image-container {
@@ -238,6 +237,10 @@ body {
     font-size: 23px;
   }
 
+
+  .grey-breakline {
+    margin: 50px auto;
+  }
 }
 
 
