--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .image-container {
