--- a/views/projects.html
+++ b/views/projects.html
@@ -76,30 +76,11 @@
   </div>
 
   <footer>
-    <div class="phone-footer-container">
-      <p>Wil je meer over mij te weten komen? <a href="about-me.html">Klik hier!</a></p>
-      <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
+    <div class="flex-container">
+      <img src="../images/github-icon-2.svg" alt="">
+      <img src="../images/linkedin-app-white-icon.webp" alt="github logo">
     </div>
-
-    <div class="footer-container">
-      <div class="footer-info-container">
-        <div class="location-info">
-          <p>De Wieren 16</p>
-          <p>9866 AK Lutjegast</p>
-        </div>
-        <div class="contact-info">
-          <p>T: <a href="tel:+31657167632">06 57 16 76 32</a></p>
-          <p>E: <a href="mailto:Michielmitsjol@gmail.com">Michielmitsjol@gmail.com</a></p>
-        </div>
-      </div>
-      <div class="linkedin-logo-container">
-        <a href="https://www.linkedin.com" target="_blank"><img src="../images/LinkedIn-Logo.wine.png"
-            alt="linkedIn logo" /></a>
-      </div>
-      <div class="contact-btn-container">
-        <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
-      </div>
-    </div>
+    <p>©Michiel Nijenhuis</p>
   </footer>
 
   <script src="../javascript/sidebar.js"></script>
