--- a/css/about-me.css
+++ b/css/about-me.css
@@ -25,19 +25,75 @@ body {
   font-weight: 600;
 }
 
-.mn-logo-container {
-  max-width: 500px;
-  width: 70%;
-  height: fit-content;
+.grey-breakline {
+  height: 1px;
   margin: 100px auto;
+  width: 80%;
+  background-color: #979797;
+  border-radius: 1px;
 }
-.mn-logo-container img {
-  width: 100%;
-  height: auto;
+
+
+.scroll-item {
+  box-sizing: border-box;
+  height: 300px;
+  aspect-ratio: 1 / 1;
+  background-color: #2A2E30;
+  border-radius: 15px;
+  border: 1px solid #979797;
+  /*box-shadow: 5px 5px 10px 1px darkgrey;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
+
+.scroll-item img {
+  width: auto;
+  height: 100%;
+}
+
+.scroller {
+  margin: 0 auto;
+  max-width: 80%;
+}
+
+.scroller-inner {
+  padding-block: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+
+.scroller[data-animated="true"] {
+  overflow: hidden;
+  -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated="true"] .scroller-inner {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll 15s linear infinite;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 1.5rem));
+  }
+}
+
+
 
 @media screen and (max-width: 600px) {
   .about-me-text-container p {
     font-size: 20px;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .scroll-item {
+    height: 200px;
+  }
+}
+
