--- a/views/about-me.html
+++ b/views/about-me.html
@@ -2,81 +2,68 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
-    <title>OVER MIJ</title>
-    <link href="../css/about-me.css" rel="stylesheet" />
-    <link href="../css/nav-bar.css" rel="stylesheet" />
-    <link href="../css/footer.css" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
+  <title>OVER MIJ</title>
+  <link href="../css/about-me.css" rel="stylesheet" />
+  <link href="../css/nav-bar.css" rel="stylesheet" />
+  <link href="../css/footer.css" rel="stylesheet" />
 </head>
 
 <body>
-    <nav>
-        <div class="sidebar">
-            <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png"
-                    alt="MN logo" /></a>
-            <a href="index.html">HOME</a>
-            <a class="active-tab" href="about-me.html">OVER MIJ</a>
-            <a href="projects.html">PROJECTEN</a>
-            <a href="contact.html">CONTACT</a>
-        </div>
-
-        <div>
-            <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
-            <a class="hide-on-mobile" href="index.html">HOME</a>
-            <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
-            <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-            <a class="hide-on-mobile" href="contact.html">CONTACT</a>
-            <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
-        </div>
-    </nav>
-
-    <div class="about-me-text-container">
-        <p>
-            Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en zit in het eerste jaar van de opleiding
-            Software Developer. Ik programmeer met passie en leer graag. Ik heb ervaring met HTML5, CSS3, Javascript,
-            node.js en SQL. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
-        </p>
-        <p>
-            Ik zou graag met u in contact willen komen. Als u mij wilt berkeiken kan dat via de mail of telefoon. Ik
-            hoor
-            graag van u!
-        </p>
-    </div>
-    <div class="mn-logo-container">
-        <a href="index.html"><img src="../images/MN_logo.png" alt="MN-LOGO" /></a>
+  <nav>
+    <div class="sidebar">
+      <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
+      <a href="index.html">HOME</a>
+      <a class="active-tab" href="about-me.html">OVER MIJ</a>
+      <a href="projects.html">PROJECTEN</a>
+      <a href="contact.html">CONTACT</a>
     </div>
 
-    <footer>
-        <div class="phone-footer-container">
-            <p>Wil je een paar van mijn projecten zien? <a href="projects.html">Klik hier!</a></p>
-            <a href="contact.html"><button class="phone-btn">Neem contact op</button></a>
-        </div>
+    <div>
+      <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
+      <a class="hide-on-mobile" href="index.html">HOME</a>
+      <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
+      <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
+      <a class="hide-on-mobile" href="contact.html">CONTACT</a>
+      <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
+    </div>
+  </nav>
+
+  <div class="about-me-text-container">
+    <p>
+      Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en zit in het eerste jaar van de opleiding
+      Software Developer. Ik programmeer met passie en leer graag. Ik heb ervaring met HTML5, CSS3, Javascript,
+      node.js en SQL. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
+    </p>
+  </div>
+
+  <div class="grey-breakline"></div>
+
+  <div class="scroller">
+    <div class="scroller-inner">
+      <div class="scroll-item"><img src="../images/html-1.svg" alt=""></div> 
+      <div class="scroll-item"><img src="../images/css-3.svg" alt=""></div> 
+      <div class="scroll-item"><img src="../images/javascript-1.svg" alt=""></div> 
+      <div class="scroll-item"><img src="../images/c--4.svg" alt=""></div> 
+      <div class="scroll-item"><img src="../images/unity-69.svg" alt=""></div> 
+      <div class="scroll-item"><img src="../images/nodejs-1.svg" alt=""></div> 
+    </div>
+    
+  </div>
+
+  <footer class="footer-not-scroll">
+    <div class="flex-container">
+      <img src="../images/github-icon-2.svg" alt="">
+      <img src="../images/linkedin-app-white-icon.webp" alt="github logo">
+    </div>
+    <p>©Michiel Nijenhuis</p>
+  </footer>
 
 
-        <div class="footer-container">
-            <div class="footer-info-container">
-                <div class="location-info">
-                    <p>De Wieren 16</p>
-                    <p>9866 AK Lutjegast</p>
-                </div>
-                <div class="contact-info">
-                    <p>T: <a href="tel:+31657167632">06 57 16 76 32</a></p>
-                    <p>E: <a href="mailto:Michielmitsjol@gmail.com">Michielmitsjol@gmail.com</a></p>
-                </div>
-            </div>
-            <div class="linkedin-logo-container">
-                <a href="https://www.linkedin.com" target="_blank"><img src="../images/LinkedIn-Logo.wine.png"
-                        alt="linkedIn logo"></a>
-            </div>
-            <div class="contact-btn-container">
-                <a href="contact.html"><button class="contact-btn" type="button">Neem contact op</button></a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/scroll.js"></script>
 </body>
 
 </html>
