--- a/views/contact.html
+++ b/views/contact.html
@@ -14,19 +14,19 @@
   <nav>
     <div class="sidebar">
       <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
-      <a href="index.html">HOME</a>
-      <a href="about-me.html">OVER MIJ</a>
-      <a href="projects.html">PROJECTEN</a>
-      <a class="active-tab" href="contact.html">CONTACT</a>
+      <a class="nav-link" href="index.html">HOME</a>
+      <a class="nav-link" href="about-me.html">OVER MIJ</a>
+      <a class="nav-link" href="projects.html">PROJECTEN</a>
+      <a class="nav-link active-tab" href="contact.html">CONTACT</a>
     </div>
 
     <div>
       <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
-      <a class="hide-on-mobile" href="index.html">HOME</a>
-      <a class="hide-on-mobile" href="about-me.html">OVER MIJ</a>
-      <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-      <a class="active-tab hide-on-mobile" href="contact.html">CONTACT</a>
-      <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
+      <a class="nav-link hide-on-mobile" href="index.html">HOME</a>
+      <a class="nav-link hide-on-mobile" href="about-me.html">OVER MIJ</a>
+      <a class="nav-link hide-on-mobile" href="projects.html">PROJECTEN</a>
+      <a class="nav-link active-tab hide-on-mobile" href="contact.html">CONTACT</a>
+      <a class="nav-link menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt=""></a>
     </div>
   </nav>
 
@@ -60,6 +60,7 @@
   </div>
 
   <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
 </body>
 
 </html>
