--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 footer {
   box-sizing: border-box;
   width: 100%;
-  height: 40px;
-  padding: 5px;
+  height: 50px;
+  padding: 10px;
   background-color: black;
   border-top: 1px solid #979797;
 
@@ -20,7 +20,8 @@ footer div {
   width: max-content;
 }
 
-footer img {
+
+footer a {
   opacity: 0.5;
   height: 100%;
   width: auto;
@@ -28,8 +29,13 @@ footer img {
   cursor: pointer;
 }
 
-footer img:hover {
+footer a:hover {
   opacity: 1;
+}
+
+footer img {
+  width: auto;
+  height: 100%;
 }
 
 .flex-container {
