--- a/views/about-me.html
+++ b/views/about-me.html
@@ -15,55 +15,58 @@
   <nav>
     <div class="sidebar">
       <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
-      <a href="index.html">HOME</a>
-      <a class="active-tab" href="about-me.html">OVER MIJ</a>
-      <a href="projects.html">PROJECTEN</a>
-      <a href="contact.html">CONTACT</a>
+      <a class="nav-link" href="index.html">HOME</a>
+      <a class="nav-link active-tab" href="about-me.html">OVER MIJ</a>
+      <a class="nav-link" href="projects.html">PROJECTEN</a>
+      <a class="nav-link" href="contact.html">CONTACT</a>
     </div>
 
     <div>
       <a class="MN-logo-navbar" href="index.html"><img src="../images/MN_logo.png" alt="MN logo" /></a>
-      <a class="hide-on-mobile" href="index.html">HOME</a>
-      <a class="active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
-      <a class="hide-on-mobile" href="projects.html">PROJECTEN</a>
-      <a class="hide-on-mobile" href="contact.html">CONTACT</a>
-      <a class="menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
+      <a class="nav-link hide-on-mobile" href="index.html">HOME</a>
+      <a class="nav-link active-tab hide-on-mobile" href="about-me.html">OVER MIJ</a>
+      <a class="nav-link hide-on-mobile" href="projects.html">PROJECTEN</a>
+      <a class="nav-link hide-on-mobile" href="contact.html">CONTACT</a>
+      <a class="nav-link menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt=""></a>
     </div>
   </nav>
 
-  <div class="about-me-text-container">
-    <p>
+  <div id="page-container">
+    <div class="about-me-text-container">
+      <p>
       Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en zit in het eerste jaar van de opleiding
       Software Developer. Ik programmeer met passie en leer graag. Ik heb ervaring met HTML5, CSS3, Javascript,
       node.js en SQL. Ook heb ik games gemaakt in unity met C#, dat vind ik nog steeds leuk om te doen.
-    </p>
-  </div>
-
-  <div class="grey-breakline"></div>
-
-  <div class="scroller">
-    <div class="scroller-inner">
-      <div class="scroll-item"><img src="../images/html-1.svg" alt=""></div> 
-      <div class="scroll-item"><img src="../images/css-3.svg" alt=""></div> 
-      <div class="scroll-item"><img src="../images/javascript-1.svg" alt=""></div> 
-      <div class="scroll-item"><img src="../images/c--4.svg" alt=""></div> 
-      <div class="scroll-item"><img src="../images/unity-69.svg" alt=""></div> 
-      <div class="scroll-item"><img src="../images/nodejs-1.svg" alt=""></div> 
+      </p>
     </div>
-    
-  </div>
 
-  <footer class="footer-not-scroll">
+    <div class="grey-breakline"></div>
+
+    <div class="scroller">
+      <div class="scroller-inner">
+        <div class="scroll-item"><img src="../images/html-1.svg" alt=""></div> 
+        <div class="scroll-item"><img src="../images/css-3.svg" alt=""></div> 
+        <div class="scroll-item"><img src="../images/javascript-1.svg" alt=""></div> 
+        <div class="scroll-item"><img src="../images/c--4.svg" alt=""></div> 
+        <div class="scroll-item"><img src="../images/unity-69.svg" alt=""></div> 
+        <div class="scroll-item"><img src="../images/nodejs-1.svg" alt=""></div> 
+      </div>
+
+    </div>
+
+  <footer>
     <div class="flex-container">
-      <img src="../images/github-icon-2.svg" alt="">
-      <img src="../images/linkedin-app-white-icon.webp" alt="github logo">
+      <a href="https://github.com/m-nijenhuis" target="_blank"><img src="../images/github-icon-2.svg" alt="github logo"></a>
+      <a href="https://linkedin.com" target="_blank"><img src="../images/linkedin-app-white-icon.webp" alt="linkedin logo"></a>
     </div>
     <p>©Michiel Nijenhuis</p>
   </footer>
 
+  </div>
 
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/scroll.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
 </body>
 
 </html>
